<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
<Button android:text="@string/cont" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/Button001"></Button>
<Button android:text="@string/level1" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:id="@+id/Button002"></Button>
<Button android:text="@string/level2" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:autoText="true" android:id="@+id/Button003"></Button>
<Button android:text="@string/level3" android:id="@+id/Button04" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:autoText="true" ></Button>
<Button android:text="@string/level4" android:id="@+id/Button05" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:autoText="true" ></Button>
<Button android:text="@string/level5" android:id="@+id/Button06" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:autoText="true" ></Button>
</LinearLayout>
